test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/initialized_void.plx
#  in our implementation, you can't declare void variables
#  the standard may let you _declare_ void variables
#  but you can't define initialize them (or define any incomplete object)
extrn v: none = 0

pub fn main(none) i32 {
    return 0
}
